# PantherLunabotics2025-2026

./: .gitignore  .gitmodules  PAT.txt  README.md  requirements.txt  test.py
Jetson/: CMakeLists.txt
archive/: CMakeLists.txt  motor_config_test.py  motor_control.cpp  motor_example.py  test_example.py
mission_control/: Server.py  TCPServer.py  client.py  control.py  input_listener.py  lidar_viewer.py  main.py  server.py
onboard_software/: ECBF_unicycle.m  auto.py  autonomous.py  autonomous_controller.py  client.py  input_listener.py  main.py  motor_config_test.py  randomiseObstacles.m  robot.py  robot_params.py  server.py  supervisor.py  teleOp.py  teleop.py  teleop_controller.py  test.py  test_example.py
onboard_software/C++/: ECBF_unicycle.prj  controls.csv  obstacles.csv
onboard_software/idk_what_to_call_this/: ECBF_xy.m
onboard_software/logs/: auger_2026-03-02_19-15-03.csv  auger_2026-03-02_19-21-03.csv  auger_2026-03-02_19-30-55.csv  motor_6_2026-02-28_17-04-19.md  motor_6_2026-02-28_17-25-34.md  motor_6_2026-02-28_17-30-39.md  motor_6_2026-02-28_17-49-29.md
onboard_software/subsystems/: CMakeLists.txt  auger.py  drivetrain.py  lidarScanner.py  motor_control.cpp  motor_example.py  test_example.py  test_lidar.py  test_lidar_stream.py  test_motor_controller.py
onboard_software/subsystems/sparkcan-examples/: CMakeLists.txt
onboard_software/subsystems/sparkcan-examples/src/: control.cpp  motor_control.cpp  status.cpp
other/C++/: CMakeLists.txt  ecbf_unicycle  ecbf_unicycle.cpp  errors.csv  plot_results.py  trajectory.csv
other/idk_what_to_call_this/: ECBF_unicycle.asv
